# mimiq

./: .gitignore  LICENSE  Makefile  README.md  cypress.config.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc.json
.github/workflows/: ci.yml  docs.yml  npm-publish.yml  python-publish.yml
agent-recordings/job-20260410-112026-m39k/: manifest.json
cypress/: tsconfig.json
cypress/e2e/: return-flow.cy.ts
cypress/support/: e2e.ts
examples/: agent-test.mjs  eval-screenshots.mjs  generate-report.mjs  run-agent.sh  run-all.sh
examples/agent-scenes/: customer_support_basic.yaml  frustrated_customer.yaml  techshop_return_flow.yaml  track_order_button.yaml
examples/agent-server/: pyproject.toml
examples/app/: index.html  package.json
examples/cypress/: README.md  cypress.config.ts  package-lock.json  package.json  tsconfig.json
examples/layoutlens-visual/: README.md  fixtures.ts  package.json  playwright.config.ts
examples/playwright/: fixtures.ts  package-lock.json  package.json  playwright.config.ts
examples/playwright-basic/: README.md  fixtures.ts  package.json  playwright.config.ts
examples/scenes/: return_needs_handoff.yaml
examples/stagehand/: README.md  fixtures.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
examples/stagehand-autonomous/: fixtures.ts  package.json
scripts/: generate-gifs.sh  layoutlens-server.py  record-demo.ts  requirements.txt  run-all-examples.sh
src/: index.ts  types.ts
test/agent-server/: README.md  pyproject.toml
test/agent-server/src/: agent_server.py
(+265 files in other folders)
